<resources>
    <string name="app_name">Sports Quiz</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="splash_fragment_label">Quiz Fragment</string>
    <string name="start_fragment_label">Start Fragment</string>
    <string name="select_difficulty_fragment_label">Select Difficulty Fragment</string>
    <string name="quiz_fragment_label">Quiz Fragment</string>
    <string name="result_fragment_label">Result Fragment</string>
    <string name="shop_fragment_label">Shop Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- First Fragment -->
    <string name="quiz">QUIZ</string>
    <string name="infoText">Train your brain with us!</string>
    <string name="button_start">Start</string>
    <string name="text_select_difficulty">Choose the difficulty of the quiz</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="difficult">Difficulty: %1$s</string>
    <string name="count_question">%1$s/10</string>
    <string name="finish">finish</string>
    <string name="your_result">Your Result:</string>
    <string name="shop">shop</string>
    <string name="back">back</string>
</resources>