<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.pechenegmobilecompanyltd.sportsquiz.ui.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash_screen">

        <action
            android:id="@+id/action_SplashFragment_to_StartFragment"
            app:destination="@id/StartFragment"
            app:popUpTo="@id/SplashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/StartFragment"
        android:name="com.pechenegmobilecompanyltd.sportsquiz.ui.StartFragment"
        android:label="@string/start_fragment_label"
        tools:layout="@layout/fragment_start">

        <action
            android:id="@+id/action_StartFragment_to_SelectDifficultyFragment"
            app:destination="@id/SelectDifficultyFragment"/>
        <action
            android:id="@+id/action_StartFragment_to_ShopFragment"
            app:destination="@id/ShopFragment"/>
    </fragment>
    <fragment
        android:id="@+id/SelectDifficultyFragment"
        android:name="com.pechenegmobilecompanyltd.sportsquiz.ui.SelectDifficultyFragment"
        android:label="@string/select_difficulty_fragment_label"
        tools:layout="@layout/fragment_select_difficulty">

        <action
            android:id="@+id/action_SelectDifficultyFragment_to_QuizFragment"
            app:destination="@id/QuizFragment"/>
    </fragment>
    <fragment
        android:id="@+id/QuizFragment"
        android:name="com.pechenegmobilecompanyltd.sportsquiz.ui.QuizFragment"
        android:label="@string/quiz_fragment_label"
        tools:layout="@layout/fragment_quiz">

        <action
            android:id="@+id/action_QuizFragment_to_ResultFragment"
            app:destination="@id/ResultFragment"
            app:popUpTo="@id/ResultFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/ResultFragment"
        android:name="com.pechenegmobilecompanyltd.sportsquiz.ui.ResultFragment"
        android:label="@string/result_fragment_label"
        tools:layout="@layout/fragment_result">

        <action
            android:id="@+id/action_ResultFragment_to_StartFragment"
            app:destination="@id/StartFragment"
            app:popUpTo="@id/StartFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/ShopFragment"
        android:name="com.pechenegmobilecompanyltd.sportsquiz.ui.ShopFragment"
        android:label="@string/shop_fragment_label"
        tools:layout="@layout/fragment_shop">

        <action
            android:id="@+id/action_ShopFragment_to_StartFragment"
            app:destination="@id/StartFragment"
            app:popUpTo="@id/StartFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>