<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".ui.SelectDifficultyFragment">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center|top"
        android:text="@string/text_select_difficulty"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/button_easy"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:text="@string/easy"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/button_medium"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/medium"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_easy"
        app:layout_constraintStart_toStartOf="@+id/button_easy"
        app:layout_constraintTop_toBottomOf="@+id/button_easy"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/button_hard"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:text="@string/hard"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_medium"
        app:layout_constraintTop_toBottomOf="@+id/button_medium"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>